# python-template

./: .aiderignore  .gitignore  .pre-commit-config.yaml  .python-version.jinja  README.md  copier.yml  justfile  pyproject.toml  pyproject.toml.jinja
src/: logconfig.py  settings.py  utils.py  {% if is_package %}{{ package_name }}{{ _copier_conf.sep }}{% endif %}logconfig.py.jinja  {% if is_package %}{{ package_name }}{{ _copier_conf.sep }}{% endif %}main.py.jinja  {% if is_package %}{{ package_name }}{{ _copier_conf.sep }}{% endif %}settings.py.jinja  {% if is_package %}{{ package_name }}{{ _copier_conf.sep }}{% endif %}utils.py.jinja
tests/: test_utils.py.jinja
