[project]
name = "python-template"
version = "0.1.0"
description = "A Python template for new projects"
authors = [{ name = "Joe Joiner", email = "2454320+joejoinerr@users.noreply.github.com" }]
requires-python = ">= 3.11"
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
src = ["src"]
output-format = "concise"

[tool.ruff.lint]
select = ["E", "F", "I", "C90", "B", "N", "D", "ANN", "TRY", "PD", "RUF200", "UP"]
ignore = ["E501", "B904", "ANN003"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"tests/**/*.py" = ["D", "ANN001", "ANN201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 6.
max-complexity = 6
